<?xml version="1.0" encoding="utf-8"?>
<!--
/*
* Copyright (C) 2009 The Android Open Source Project
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- General -->
    <skip />
    <!-- Application name -->
    <string name="wallpapers">Simple Live Wallpaper</string>


    <string name="wallpaper_clock">Simple Wallpaper</string>


    <string name="clock_settings">Settings</string>
    <string name="clock_settings_title">Select color</string>
    <string name="clock_settings_summary">Choose the background color for wallpaper</string>
    <string name="color_code_title">Specify color code for background</string>
    <string name="color_code_summary">i.e #00FFFF(Type D for going back to default)</string>
    <string name="color_code_text_title">Specify color code for text</string>
    <string name="color_code_text_summary">i.e #00FFFF(Type D for going back to default)</string>
    <string name="show_time_title">Show time</string>
    <string name="show_time_summary">Check this if you want to show time on the wallpaper</string>
    <string name="show_day_title">Show day</string>
    <string name="show_day_summary">Check this if you want to show day on the wallpaper</string>
    <string name="show_date_title">Show date</string>
    <string name="show_date_summary">Check this if you want to show date on the wallpaper</string>
    <string name="show_location_title">Show location</string>
    <string name="show_location_summary">Check this if you want to show location on the wallpaper</string>
</resources>
