<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/clock_settings"
    android:key="clockwallpaper_settings">

    <yuku.ambilwarna.widget.AmbilWarnaPreference
        android:key="color_code"
        android:defaultValue="0xffffa07a"
        android:title="@string/color_code_title" />
    <yuku.ambilwarna.widget.AmbilWarnaPreference
        android:key="color_code_text"
        android:defaultValue="0xffffffff"
        android:title="@string/color_code_text_title" />
    <CheckBoxPreference android:title="@string/show_time_title"
        android:defaultValue="true"
        android:summary="@string/show_time_summary"
        android:key="show_time" />
    <CheckBoxPreference android:title="@string/show_day_title"
        android:defaultValue="true"
        android:summary="@string/show_day_summary"
        android:key="show_day" />
    <CheckBoxPreference android:title="@string/show_date_title"
        android:defaultValue="true"
        android:summary="@string/show_date_summary"
        android:key="show_date" />
    <CheckBoxPreference android:title="@string/show_location_title"
        android:defaultValue="true"
        android:summary="@string/show_location_summary"
        android:key="show_location" />


</PreferenceScreen>